BAEL-4876: Use Java 8 API